<resources>
    <string name="app_name">TourdaY</string>
    <string name="sring1">With You Wherever You</string>
    <string name="sring2"> Go</string>
    <string name="hint_username_or_email">Username Or Email</string>
    <string name="hint_username">Username</string>
    <string name="hintCode">Enter 8 digit Reset Password Code</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_confirmPassword">Confirm New Password</string>
    <string name="hint_old_password">Confirm Old Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="saveOrGetCodeText">Get Code</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="forgetPassword2">Forget Password ?</string>
    <string name="err_msg_userName1">Enter your username or Email</string>
    <string name="err_msg_userName2">Enter valid username</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Password Must be 8 Character</string>
    <string name="facebook_Signin">Sign In with Facebook</string>
    <string name="facebook_Signup">Sign Up with Facebook</string>
    <string name="google_Signin">Sign In with Google</string>
    <string name="google_Signup">Sign Up with Google</string>
    <string name="search">Search</string>
    <string name="facebook_url_hint">Enter Your Facebook URl</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="enableLocationAlert">Your Location seems to be disabled, do you want to enable it?</string>
    <string name="bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="logout">Do You Want to Logout?</string>
    <string name="saejk_valley_blog">সাজেক ভ্যালি (Saejk Valley) জেলার সর্বউত্তরের মিজোরাম সীমান্তে অবস্থিত। সাজেক হলো বাংলাদেশের সবচেয়ে বড় ইউনিয়ন, যার আয়তন ৭০২ বর্গমাইল। সাজেক এর উত্তরে ভারতের ত্রিপুরা, দক্ষিনে রাঙামাটির লংগদু, পূর্বে ভারতের মিজোরাম, পশ্চিমে খাগড়াছড়ির দীঘিনালা। সাজেক রাঙামাটি জেলায় অবস্থিত হলেও এর যাতায়াত সুবিধা খাগড়াছড়ি এর দীঘিনালা থেকে। রাঙামাটি থেকে নৌপথে কাপ্তাই হয়ে এসে অনেক পথ হেঁটে সাজেক আসা যায়। খাগড়াছড়ি জেলা সদর থেকে এর দূরত্ব ৭০ কিলোমিটার। আর দীঘিনালা থেকে ৪৯ কিলোমিটার। বাঘাইহাট থেকে ৩৪ কিলোমিটার।খাগড়াছড়ি থেকে দীঘিনালা আর্মি ক্যাম্প হয়ে সাজেক যেতে হয়। পরে পরবে ১০ নং বাঘাইহাট পুলিশ ও আর্মি ক্যাম্প। যেখান থেকে আপনাকে সাজেক যাবার মূল অনুমতি নিতে হবে। তারপর কাসালং ব্রিজ, ২টি নদী মিলে কাসালং নদী হয়েছে। পরে টাইগার টিলা আর্মি পোস্ট ও মাসালং বাজার। বাজার পার হলে পরবে সাজেকের প্রথম গ্রাম রুইলুই পাড়া যার উচ্চতা ১৮০০ ফুট। এর প্রবীণ জনগোষ্ঠী লুসাই। এছাড়া পাংকুয়া ও ত্রিপুরারাও বাস করে। ১৮৮৫ সালে এই পাড়া প্রতিষ্ঠিত হয়। এর হেড ম্যান লাল থাংগা লুসাই। রুইলুই পাড়া থেকে অল্প সময়ে পৌঁছে যাবেন সাজেক। সাজেক এর বিজিবি ক্যাম্প বাংলাদেশের সর্বোচ্চ বিজিবি ক্যাম্প। এখানে হেলিপ্যাড আছে। সাজেক এর রুইলুই পাড়া থেকে দুই থেকে আড়াই ঘন্টার ট্রেকিং করে দেখে আসতে পারেন সুন্দর কমলক ঝর্ণাটি। কমলক ঝর্ণাটি অনেকের কাছে পিদাম তৈসা ঝর্ণা অথবা সিকাম তৈসা ঝর্ণা নামে পরিচিত। সাজেক এর শেষ গ্রাম কংলক পাড়া। এটিও লুসাই জনগোষ্ঠী অধ্যুষিত পাড়া। এর হেড ম্যান চৌমিংথাই লুসাই। কংলাক পাড়া থেকে ভারতের লুসাই পাহাড় দেখা যায়। যেখান থেকে কর্ণফুলী নদী উৎপন্ন হয়েছে। সাজেক বিজিবি ক্যাম্প এর পর আর কোন ক্যাম্প না থাকায় নিরাপত্তা জনিত কারণে কংলক পাড়ায় মাঝে মাঝে যাওয়ার অনুমতি দেয় না। ফেরার সময় হাজাছড়া ঝর্ণা, দীঘিনালা ঝুলন্ত ব্রিজ ও দীঘিনালা বনবিহার দেখে আসতে পারেন। সাজেক যাওয়ার উপায় ঢাকা থেকে শ্যামলী, হানিফ ও অন্যান্য পরিবহনের বাসে খাগড়াছড়ি যেতে পারবেন। ভাড়া পড়বে ৫২০ টাকা। এ ছাড়া সরাসরি দীঘিনালা যেতে চাইলে শান্তি পরিবহনের বাস যায়। ভাড়া ৫৮০ টাকা। এছাড়াও বিআরটিসি ও সেন্টমার্টিন পরিবহনের এসি বাস খাগড়াছড়ি যায়। যোগাযোগ সেন্টমার্টিন পরিবহন, আরামবাগঃ ০১৭৬২৬৯১৩৪১ , ০১৭৬২৬৯১৩৪০ খাগড়াছড়িঃ ০১৭৬২৬৯১৩৫৮ শ্যামলী পরিবহন – আরামবাগঃ ০২-৭১৯৪২৯১ কল্যাণপুরঃ ৯০০৩৩৩১ , ৮০৩৪২৭৫ আসাদগেটঃ ৮১২৪৮৮১ , ৯১২৪৫৪ দামপাড়া (চট্টগ্রাম) ০১৭১১৩৭১৪০৫ , ০১৭১১৩৭৭২৪৯, শান্তি পরিবহন – আরামবাগ ( ঢাকা ) – ০১১৯০৯৯৪০০৭ অক্সিজেন(চট্টগ্রাম) ০১৮১৭৭১৫৫৫২, চট্টগ্রাম থেকেও খাগড়াছড়ি যেতে পারবেন। BRTC এসি বাস (চট্টগ্রাম) কদমতলীঃ ০১৬৮২৩৮৫১২৫ খাগড়াছড়িঃ ০১৫৫৭৪০২৫০৭ খাগড়াছড়ি থেকে অথবা দীঘিনালা থেকে জীপগাড়ি (লোকাল নাম চাঁন্দের গাড়ি) রিজার্ভ নিয়ে একদিনে সাজেক ভ্যালী ঘুরে আসতে পারবেন। ভাড়া নিবে ৫৪০০ টাকা। এক গাড়িতে ১০ জন বসা যায় কিন্তু সর্বোচ্চ ১৫ জন বসতে পারবেন। যদি দিনে যেয়ে ওই দিনই ফেরত আসেন তাহলে ভাড়া পড়বে ৫৪০০ টাকা। আর যদি একরাত থেকে পরের দিন আসেন সেক্ষেত্রে ভাড়া পড়বে ৭৭০০ টাকা। আর দু রাত থাকলে ১০০০০-১৩০০০ টাকার মতো পড়বে পার গাড়ি। একটা কথা মাথায় রাখবেন, এটা সম্পুর্ণ একটা চান্দের গাড়ির ভাড়া, এক জনের নয়। লোক কম হলে শহর থেকে সিএনজি নিয়েও যেতে পারবেন। ভাড়া ৪০০০-৫০০০ টাকার মতো নিবে। যদিও সিএনজি নিয়ে যাওয়াটা খুব ঝুকিপূর্ণ। উল্টে যাবার সম্ভাবনা থাকে। অথবা খাগড়াছড়ি শহর থেকে দীঘিনালা গিয়ে সাজেক যেতে পারবেন। বাসে দীঘিনালা জন প্রতি ৪৫ টাকা এবং মোটর সাইকেলে জন প্রতি ভাড়া ১০০ টাকা। দীঘিনালা থেকে ১০০০-১২০০ টাকায় মোটর সাইকেল রিজার্ভ নিয়েও সাজেক ঘুরে আসতে পারবেন। ফেরার সময় অবশ্যই সন্ধ্যার আগে আপনাকে বাঘাইহাট আর্মি ক্যাম্প পার হতে হবে। তা না হলে অনেক প্রশ্নের সম্মুখীন হতে হবে। ক্যাম্পের ছবি তোলা নিষেধ এই বিষয়টি অবশ্যই মাথায় রাখবেন। কোথায় খাবেন? জেকে খেতে হলে রুন্ময় রিসোর্টে খাওয়া যায়। আর তা ছাড়া সাজেক রিসোর্টে থাকলে ওখানেও খাওয়া যায়। এ ছাড়া রুইলুই ও কংলক পাড়াতে আদিবাসিদের সাথে খাওয়া যায়। এ জন্যে অবশ্য আপনাকে আগে থেকে বলে দিতে হবে কজন খাবেন, কি খেতে চান এসব। সাজেকে থাকার হোটেল/রিসোর্ট খাগড়াছড়িতে পর্যটন মোটেল সহ বিভিন্ন মানের থাকার হোটেল আছে। দীঘিনালায় কয়েকটি হোটেল থাকলেও দীঘিনালা গেস্ট হাউজের মান কিছুটা ভালো। ১) সাজেক – এটি বাংলাদেশ সেনাবাহিনী পরিচালিত রিসোর্ট। যার দ্বিতীয় তলায় চারটি কক্ষ আছে। খাবারের ব্যবস্থা আছে। যোগাযোগঃ ০১৮৫৯০২৫৬৯৪ / ০১৮৪৭০৭০৩৯৫। ২) রুন্ময় রিসোর্ট – এটি সাজেকে অবস্থিত। এর নীচ তলায় তিনটি কক্ষ আছে। প্রতিটি কক্ষে ২ জন থাকতে পারবেন। অতিরিক্ত টাকা দিয়ে অতিরিক্ত বেড নিতে পারবেন। চারটি তাবু আছে, প্রতি তাবুতে চার জন থাকতে পারবেন। যোগাযোগঃ ০১৮৬২০১১৮৫২। চাঁদের গাড়ির জন্যে যোগাযোগ দীঘিনালার চাঁদের গাড়ির ড্রাইভার নূর আলম – ০১৮২০৭৩২০৪৩, রাজ – ০১৮২০৭৪১৬৬২, ০১৮৪৯৮৭৮৬৪৯, হানিফ – ০১৮২৮৮২৯৯০৮, মিধল – ০১৮৬৭১৩৫২১৪, শিবু- ০১৮২০৭৪৬৭৪৪ । ঢাকা থেকে যেতে চাইলে Team অদম্য পরিবারের সাথে যেতে পারেন, বিস্তারিত এখানে</string>
    <string name="create_post">Create Post</string>
    <string name="enter_description">What\'s on your Mind,</string>
    <string name="enter_blog_description">Enter Blog Description</string>
    <string name="enter_blog_title">Enter Blog Title</string>
    <string name="todo">TODO</string>
    <string name="choose_division">Choose Division</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_delete_this">Do you Want to delete This</string>
    <string name="social_text">\@tylersuehr7, you\'re the coolest! #AndriodDev\n\nEmail: tylersuehr@gmail.com\nWebsite: http://www.suehrsolutions.net</string>
    <string name="visited_area">Visited Area</string>
    <string name="none">None</string>
    <string name="username">\@username</string>
    <string name="event_details">Event Details</string>
    <string name="google_io_2020">Google IO 2020</string>
    <string name="join_now">Join Now</string>
    <string name="home">Home</string>
    <string name="blog">Blog</string>
    <string name="event">Event</string>
    <string name="e_commerce">Shop</string>
    <string name="bd_map">BD Map</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="changePasswordLogOutHints">Stay Logged In?</string>
    <string name="edit_location">Edit Location</string>
    <string name="my_profile">My Profile</string>
    <string name="have_no_account">Have no Account!!</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="blog_details">Blog Details</string>
    <string name="create_blog">Create Blog</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="transaction_nb">* You can Send the transaction number only once.\nPlease Check Carefully</string>
    <string name="settings">Settings</string>
    <string name="enable_dark_color">Enable Dark Color</string>
    <string name="dark_mood">Dark Mood</string>
    <string name="upload">Upload</string>
    <string name="resend_code">Resend Code</string>
    <string name="change_password">Change Password</string>
    <string name="changePasswordHints">Before Change Password Confirm Old Password</string>
    <string name="deleteAccountHints">Before Delete Account Confirm Old Password</string>
    <string name="changePasswordHints2">Check Your Email !!</string>
    <string-array name="bdDivision">
        <item>Barishal</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Mymensingh</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="paymentType">
        <item>Bkash</item>
        <item>Rocket</item>
        <item>Nogod</item>
    </string-array>
    <string-array name="bdDistrict">
        <item>Select District</item>
        <item>Panchagarh</item>
        <item>Thakurgaon</item>
        <item>Dinajpur</item>
        <item>Nilphamari</item>
        <item>Lalmonirhat</item>
        <item>Kurigram</item>
        <item>Rangpur</item>
        <item>Gaibandha</item>
        <item>Joypurhat</item>
        <item>Bogra</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Chapainawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrokona </item>
        <item>Sherpur</item>
        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Chattogram</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Comilla</item>
        <item>Cox\'s Bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
</resources>