<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/blog"
            android:icon="@drawable/blog"
            android:title="@string/blog"
            />
        <item
            android:id="@+id/event"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/event"
            />
        <item
            android:id="@+id/ecom"
            android:icon="@drawable/ecom"
            android:title="@string/e_commerce"
            />
        <item
            android:id="@+id/bdmap"
            android:icon="@drawable/bangladesh"
            android:title="@string/bd_map"
            />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/profile"
            >
            <menu>
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/login"
                    android:title="@string/sign_in"
                    />
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile"
                    />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="@string/log_out"
                    />
            </menu>

        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="Others"
            >
            <menu>
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="Setting"
                    />

            </menu>

        </item>
    </group>


</menu>