<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".Activity.Authentication.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBackForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:id="@+id/signUpBody"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="70dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="165dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgetPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/resetPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_input_layout_custom"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/reset8DigitCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hintCode"
                        android:inputType="textNoSuggestions"
                        android:padding="5dp"
                        android:singleLine="true"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_input_layout_custom"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_input_layout_custom"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_confirmPassword"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgetPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_username_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_layout_custom"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/userNameOrEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_username"
                        android:inputType="text|textEmailAddress"
                        android:padding="5dp"
                        android:singleLine="true"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/resendCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/saveOrGetCodeForgetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:text="@string/saveOrGetCodeText"
            android:textAllCaps="false"
            android:textColor="@color/txtWhite"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>