<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Activity.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

    <LinearLayout
        android:id="@+id/signInBody"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="70dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="165dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/color_primary_text"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_input_layout_custom"
                android:padding="3dp">

                <EditText
                    android:id="@+id/userNameSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_username"
                    android:inputType="textNoSuggestions"
                    android:padding="5dp"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_input_layout_custom"
                android:padding="3dp">

                <EditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <include layout="@layout/have_no_account" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/txtWhite"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:background="@drawable/facebook_and_google_background"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/fb"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/facebook_Signin"
                android:textColor="@color/color_primary_text"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="3dp"
            android:orientation="horizontal"
            android:background="@drawable/facebook_and_google_background">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/google_Signin"
                android:textAlignment="center"
                android:textColor="@color/color_primary_text"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/gif_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/signUpBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>