<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Activity.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

    <LinearLayout
        android:id="@+id/signUpBody"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="70dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="165dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <include layout="@layout/username"/>
        <include layout="@layout/email"/>
        <include layout="@layout/password"/>


<!--        <include layout="@layout/already_have_account" />-->

        <include layout="@layout/already_have_account" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/txtWhite"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:background="@drawable/facebook_and_google_background"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/fb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:text="@string/facebook_Signup"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="3dp"
            android:orientation="horizontal"
            android:background="@drawable/facebook_and_google_background"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:text="@string/google_Signup"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <include
        layout="@layout/gif_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/signUpBody"
        app:layout_constraintEnd_toEndOf="@+id/signUpBody"
        app:layout_constraintStart_toStartOf="@+id/signUpBody"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>